force-app/main/default/objects/ERPIntegrationSettings__mdt/ERPIntegrationSettings__mdt.object-meta.xml
<CustomObject>
    <description>JJDSF-329</description>
    <label>ERPIntegrationSetting</label>
    <pluralLabel>ERP Integration Settings</pluralLabel>
</CustomObject>