force-app/main/default/objects/ERPIntegrationSettings__mdt/fields/DistChannel__c.field-meta.xml
<CustomField>
    <fullName>DistChannel__c</fullName>
    <label>Dist Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>