force-app/main/default/objects/ERPIntegrationSettings__mdt/fields/OrderType__c.field-meta.xml
<CustomField>
    <fullName>OrderType__c</fullName>
    <label>Order Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>