force-app/main/default/objects/ERPIntegrationSettings__mdt/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <label>Sales Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>